--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>Document</title>
     <!--Hoja Estilo-->
     <link rel="stylesheet" href="/Styles.css">
+    <!--Tipo de letra-->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="containerOne">
         <div class="containerTwo">
             <legend>Register</legend>
             <form action="#" method="POST">
-                <label for ="name">Name:</label>
+                <label for ="name">Name</label>
                 <input type="text" id="name" name="" placeholder="Enter your name" required>
 
-                <label for="Email">Email:</label>
+                <label for="Email" class="label-Email">Email</label>
                 <input type="text" id="email" name="email" placeholder="Example@gmail.com" required>
                 <div class="container-Btn">
                     <button type="submit" class="botton-Register">Continue</button>
