se implemento la sombra en la parte de superior izquierda y iconos para slider

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <!--Tipo de letra-->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
+    <!--Importar Icon-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+
+
 </head>
 <body>
     <div class="containerOne">
@@ -25,6 +30,14 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div class="textSlider">
+        <span class="text">Step 1 of 3</span>
+        <div class="shadow">
+            <i style="margin-left: 20px;" class="fa-solid fa-circle"></i>
+        </div>
+        <i class="fa-solid fa-circle"></i>
+        <i class="fa-solid fa-circle"></i>
     </div>
 </body>
 </html>
