Diseño primera Pantalla  Registro

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 </head>
 <body>
+    <!--Estructura Formulario-->
     <div class="containerOne">
         <div class="containerTwo">
             <legend>Register</legend>
@@ -31,13 +32,18 @@
             </form>
         </div>
     </div>
+    <!--Estructura del Texto y Slider-->
     <div class="textSlider">
         <span class="text">Step 1 of 3</span>
-        <div class="shadow">
-            <i style="margin-left: 20px;" class="fa-solid fa-circle"></i>
+        <div class="shadow " style="margin-left:18px">
         </div>
-        <i class="fa-solid fa-circle"></i>
-        <i class="fa-solid fa-circle"></i>
+        <div class="shadow-icon">
+            <i class="fa-solid fa-circle"></i>
+
+        </div>
+        <div class="shadow-icon">
+            <i class="fa-solid fa-circle"></i>
+        </div>
     </div>
 </body>
 </html>
