inicio pantalla dos

--- a/index2.html
+++ b/index2.html
@@ -8,38 +8,32 @@
     <link rel="stylesheet" href="/Styles.css">
     <!--Tipo de letra-->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
     <!--Importar Icon-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-
 
 </head>
 <body>
     <!--Estructura Formulario-->
     <div class="containerOne">
         <div class="containerTwo">
-            <legend>Register</legend>
+            <legend>Which topics you are interested in ?</legend>
             <form action="#" method="POST">
-                <label for ="name">Name</label>
-                <input type="text" id="name" name="" placeholder="Enter your name" required>
-
-                <label for="Email" class="label-Email">Email</label>
-                <input type="text" id="email" name="email" placeholder="Example@gmail.com" required>
+                <input class="inputsPageTwo" type="text" id="name" name="" placeholder="Software Development" required>
+                <input class="inputsPageTwo" type="text" id="email" name="email" placeholder="User Experience" required>
+                <input class="inputsPageTwo" type="text" id="email" name="email" placeholder="Graphic Design" required>
                 <div class="container-Btn">
-                    <button type="submit"  class="botton-Register">Continue</button>
+                    <button type="submit" style="margin-top:18px" class="botton-Register">Continue</button>
                 </div>
             </form>
         </div>
     </div>
     <!--Estructura del Texto y Slider-->
     <div class="textSlider">
-        <span class="text">Step 1 of 3</span>
-        <div class="shadow " style="margin-left:18px">
-        </div>
-        <div class="shadow-icon">
+        <span class="text">Step 2 of 3</span>
+        <div class="shadow-icon" style="margin-left:18px">
             <i class="fa-solid fa-circle"></i>
-
+        </div>
+        <div class="shadow">
         </div>
         <div class="shadow-icon">
             <i class="fa-solid fa-circle"></i>
